--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
 			<div class="text-center">
 				<img src="img/profiler-round2.png" width=200 class="profile-pic">
-				<h1>Chris Dermody</h1>
+				<h1>Isaac Boateng</h1>
 			  <h3>Product Builder</h3>
 			  <h5>Web Developer</h5>
+			  <h6>Mobile Development</h6>
 
 			  <div class="text-center" style="margin:20px">
 			  	<a href="http://chrisdermody.com/" class="" target="_blank">
