--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 		</script>
 		
-		<link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-                <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-                <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-                <link rel="manifest" href="/favicon_io/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+                <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+                <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+                <link rel="manifest" href="favicon_io/site.webmanifest">
 
 
 
@@ -55,7 +55,7 @@
 		<div class="container-fluid">
 
 			<div class="text-center">
-				<img src="img/profiler-round2.png" width=200 class="profile-pic">
+				<img src="favicon_io/favicon-16x16.png" width=200 class="profile-pic">
 				<h1>Isaac Boateng</h1>
 			  <h3>Product Builder</h3>
 			  <h5>Web Developer</h5>
