--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="container-fluid">
 
 			<div class="text-center">
-				<img src="favicon_io/favicon-16x16.png" width=200 class="profile-pic">
+				<img class="img-circle"  src="favicon_io/apple-touch-icon.png" alt="Responsive image">
 				<h1>Isaac Boateng</h1>
 			  <h3>Product Builder</h3>
 			  <h5>Web Developer</h5>
